Made splashscreen, added the rest of the food trucks from fetch to be shown on map

--- a/TrueTruckTracker/app.json
+++ b/TrueTruckTracker/app.json
@@ -13,9 +13,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/cute-png-pikachu-5.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FF1506"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
