--- a/TrueTruckTracker/package.json
+++ b/TrueTruckTracker/package.json
@@ -19,9 +19,10 @@
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.16"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
